# HeadlessCapturePortal

./: .gitignore  CONFIG.toml  EXAMPLE.toml  EXAMPLE.yml  LICENSE  README.md  exCONFIG.toml  headers.json  main.py  pyproject.toml  requirements.txt
.github/: Dockerfile  actions.yml  exfile-01.html  main.yml  mod | grep overlay  requirements.txt  web.html  webknd.py
.github/DockerArch/: Dockerfile
.github/DockerNet/: Dockerfile  webknd.py
.github/DockerNet/templates/: exfile-01.html  failure.html  sub-success.html  web.html
.github/workflows/: dockercreate.yml  dockercreateartifact  main.yml  mypy.yml  pytest.yml
Captr/: CaptiveDetect.py  ConfigDistributor.py  ConfigParser.py  Debackend.py  LoggingRead.py  LoginParser.py  Orchestrator.py  PlaywrightBackend.py  SimpleBackend.py  TOMLRead.py  backend.py  keystorer.py  logging.py  logging.yml  main.py  parser.py  something.py  sum.py  visualize.py
Examplelogins/: EXAMPLE.toml  TestingFile.toml  UnitTesting.toml  something.toml
TestingFiles/: BADLOGIN.toml  BADLOGIN_2.toml  BADLOGIN_3.toml  BAD_TOML.toml  BAD_TOML_2.toml  CORRUPTED_TOML  examplecaptureportal.htm
TestingFiles/examplecaptureportal_files/: cp-scripts.js  gtag  main.css
tests/: parsertest.py  test_example.py  test_file_unittst.py  test_intake.py  test_login_parser.py  test_parser.py  test_playwright_bknd.py  test_prod.py
