[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "HeadlessCaptr"
version = "0.0.4vB"
requires-python = ">=3.11"
description = "A tool for logging into any capture portals securely on headless systems. Also can be used for Automation"
authors = [{name="Jasper Nelson", email = "jnelsons532@gmail.com"}, {name="Daniella", email="Daniellagallegos22@gmail.com"}]
dependencies = [
  "keyring",
  "colorama",
  "bitwarden-keyring",
  ]
  
[project.optional-dependencies]
dev = [
  "mypy>=0.910"
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
